--- a/sass/style.css
+++ b/sass/style.css
@@ -1,3 +1,63 @@
+p, h4, h3, h2, h1 {
+  font-family: "Gilroy", Verdana, sans-serif;
+}
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 10px;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 1.6rem;
+  line-height: 2.3rem;
+  font-style: normal;
+  font-weight: normal;
+  color: #22253B;
+}
+
+h1 {
+  font-size: 4.6rem;
+  line-height: 4.6rem;
+  font-style: normal;
+  font-weight: normal;
+  color: #22253B;
+}
+
+h2 {
+  font-size: 4.6rem;
+  line-height: 4.6rem;
+  font-style: normal;
+  font-weight: normal;
+  color: #22253B;
+}
+
+h3 {
+  font-size: 3.2rem;
+  line-height: 3rem;
+  font-style: normal;
+  font-weight: normal;
+  color: #22253B;
+}
+
+h4 {
+  font-size: 2.4rem;
+  line-height: 3rem;
+  font-style: normal;
+  font-weight: normal;
+  color: #22253B;
+}
+
+p {
+  font-size: 1.6rem;
+  line-height: 2.3rem;
+  font-style: normal;
+  font-weight: normal;
+  color: #22253B;
+}
 
 /*# sourceMappingURL=style.css.map */
