--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,24 +8,30 @@ html {
 }
 body {
     @include font(1.6rem, 2.3rem);
+    @extend %font-primary;
 }
 h1 {
     @include font(4.6rem, 4.6rem);
-    @extend %font-primary;
+
 }
 h2 {
     @include font(4.6rem, 4.6rem);
-    @extend %font-primary;
+
 }
 h3 {
     @include font(3.2rem, 3rem);
-    @extend %font-primary;
+
 }
 h4 {
     @include font(2.4rem, 3rem);
-    @extend %font-primary;
+
 }
 p {
     @include font(1.6rem, 2.3rem);
-    @extend %font-primary;
+}
+a {
+    text-decoration: none;
+}
+li {
+    list-style: none;
 }
