chore: pixelPerfect method

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $color-main: #F15525;
 $color-second: #38BFF2;
 $color-addLight: #F9F8FD;
 $color-addDark: #F3F3F3;
+$color-additional: #DEDEDE;
 
 $color-blue: #5096FF;
 $color-blueDark: #4B77B9;
