--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,11 +11,11 @@ body {
     @extend %font-primary;
 }
 h1 {
-    @include font(4.6rem, 4.6rem);
+    @include font(4.6rem, 4.6rem, normal, 500);
 
 }
 h2 {
-    @include font(4.6rem, 4.6rem);
+    @include font(4.6rem, 4.6rem, normal, 600);
 
 }
 h3 {
@@ -34,4 +34,5 @@ a {
 }
 li {
     list-style: none;
+    color: $color-dark;
 }
