chore: code maintenance

--- a/sass/base/_icons.scss
+++ b/sass/base/_icons.scss
@@ -33,3 +33,38 @@
     margin-left: 122px;
     margin-top: 42px;
 }
+.icon-practice {
+    background-image: url(../../img/education/icon1.svg);
+    width: 58px;
+    height: 58px;
+}
+.icon-methods {
+    background-image: url(../../img/education/icon2.svg);
+    width: 59px;
+    height: 59px;
+}
+.icon-comuter {
+    background-image: url(../../img/education/icon3.svg);
+    width: 69px;
+    height: 60px;
+}
+.icon-calendar {
+    background-image: url(../../img/education/icon4.svg);
+    width: 71px;
+    height: 71px;
+}
+.icon-message {
+    background-image: url(../../img/education/icon5.svg);
+    width: 62px;
+    height: 57px;
+}
+.icon-rub {
+    background-image: url(../../img/education/icon6.svg);
+    width: 59px;
+    height: 59px;
+}
+.icon-card {
+    background-image: url(../../img/education/icon7.svg);
+    width: 60px;
+    height: 60px;
+}
