--- a/sass/base/_block.scss
+++ b/sass/base/_block.scss
@@ -1,7 +1,10 @@
 .block {
-    border-radius: 48px;
+    border-radius: 30px;
     background-color: $color-primary;
+    width: 270px;
+    height: 254px;
 }
+
 .item {
     display: inline-block;
     border-radius: 44px;
